Fixed mobile overflow problem

--- a/app/components/RotatingIcons.module.css
+++ b/app/components/RotatingIcons.module.css
@@ -1,16 +1,28 @@
 .centerer{
   position: absolute;
   z-index: 1;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  aspect-ratio: 1/2;
+  transform: translateY(-50%);
+  pointer-events: none;
+
+  overflow-x: hidden;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container{
-  width: 100%;
-  height: 100%;
+  width: 30%;
+  height: 30%;
+  overflow: visible;
+  
 }
 
 .icon{
   z-index: 3;
   display: inline-block;
   position: absolute;
+  overflow: visible;
 }
